prototypes/p4a/tests/multifile/invalid/multifile_circular/beta.hll
module beta

import alpha.helperA

export function helperB() -> Int { 99 }
